# cthulhu

./: .flaskenv  .gitignore  CHANGELOG.md  README.md  app.py  config.py  manage.py  pyproject.toml  wakeup.py
.github/: dependabot.yml
.github/workflows/: codeql-analysis.yml  coverage.yml
core/: admin.py  apps.py  backends.py  context_processors.py  errorviews.py  forms.py  models.py  signals.py  tasks.py  tests.py  urls.py  views.py
core/locale/es/LC_MESSAGES/: django.po
core/migrations/: 0001_initial.py  0002_rename_modules_module.py  0003_coreuser_country.py  0004_auto_20210711_2145.py  0005_auto_20210711_2234.py  0006_auto_20220109_1700.py  0007_alter_coreuser_phone.py  0008_message.py
core/static/core/css/animate.css/: package.json
core/static/core/css/font-awesome/: package.json
core/static/core/js/: app-auth.js  app.js  app.orig.js  vendor.js
core/static/core/js/bootstrap/: package.json
core/static/core/js/handlebars/: package.json
core/static/core/js/handlebars-layouts/: package.json
core/static/core/js/handlebars-registrar/: package.json
core/static/core/js/morris.js/: package.json
core/static/core/js/nprogress/: package.json
core/static/core/js/popper.js/: package.json
core/static/core/js/raphael/: package.json
core/static/core/js/sortablejs/: package.json
core/templates/: 400.html  403.html  404.html  500.html  hello.html
core/templates/core/: dashboard.html  help.html  profile.html  template_base.html  template_base_public.html
core/templates/django_registration/: activation_complete.html  activation_email_body.html  activation_email_subject.txt  activation_failed.html  registration_closed.html  registration_complete.html  registration_form.html
core/templates/registration/: login.html  new_password_reset_email.html  password_reset_complete.html  password_reset_confirm.html  password_reset_done.html  password_reset_form.html  password_reset_subject.txt  post_register.html  register.html
cthulhu/: __init__.py  asgi.py  celery.py  models.py  settings.py  urls.py  views.py  wsgi.py
cthulhu/settings/: env.py.example
flask_skeleton/: __init__.py
flask_skeleton/core/: __init__.py  routes.py
tests/: conftest.py  pytest.ini
tests/functional/: test_base.py
tests/unit/: test_config.py  test_flask_skeleton.py
