[tool.poetry]
name = "Cthulhu"
version = "0.0.1"
description = "De todito"
authors = ["Mario Hernandez <yo@mariofix.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Django = "*"
thankyou = "^0.0.3"
PyMySQL = "^1.0.2"
django-baton = "*"
django-debug-toolbar = "*"
django-logentry-admin = "*"
django-registration = "^3.3"
celery = "^5.2.7"
django-celery-results = "^2.4.0"
redis = "^5.0.0"
python-dotenv = "^1.0.0"
bcrypt = "^4.0.1"
requests = "*"
jsonfield = "^3.1.0"
sentry-sdk = "*"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
black = "*"
pytest = "*"
coverage = "*"

[tool.poetry.group.deploy]
optional = true

[tool.poetry.group.deploy.dependencies]
gunicorn = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
